src/objects/XMatch__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobQuery__c</fullName>
        <label>JobQuery</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobStart__c</fullName>
        <label>JobStart</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <label>JobStatus</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchTarget__c</fullName>
        <description>Target of Match (Contact, Licensure__c)</description>
        <label>MatchTarget</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>XMatch</label>
    <nameField>
        <label>XMatch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xmatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>